packages/server/envoy-wasm-ts.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8082 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        # All routes go to server_cluster
                        - match: { prefix: "/" }
                          route: { cluster: server_cluster }
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "challenge_handler"
                        root_id: "request_logger"
                        fail_open: false
                        vm_config:
                          vm_id: "challenge_handler_vm"
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/etc/envoy/wasm/challenge-handler.wasm"
                          allow_precompiled: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: server_cluster
      connect_timeout: 10s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: server_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: pzero-server, port_value: 8090 }

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9903
